re PR gcov-profile/55674 (>20%  size increase of lto/pgo binaries since r193747)

2012-12-14  Teresa Johnson  <tejohnson@google.com>

        PR gcov-profile/55674
	* lto-cgraph.c (merge_profile_summaries): Set min correctly the
        first time we merge into a histogram entry.

From-SVN: r194502